--- a/index.html
+++ b/index.html
@@ -5,59 +5,47 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Портфолио Максима Пермякова</title>
   <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-  <link rel="icon" type="image/png" href="https://img.icons8.com/ios-filled/50/ffffff/code.png">
 </head>
 <body>
   <header class="hero">
     <h1>Привет! Я Максим Пермяков</h1>
     <p>Я пока не профессионал, но стремлюсь стать лучше</p>
-    <a href="#about" class="hero-button"><i class="fas fa-arrow-down"></i> Узнать больше</a>
   </header>
 
-  <section id="about" class="about">
-    <h2><i class="fas fa-user"></i> Обо мне</h2>
-    <p>Я backend-разработчик: изучаю C#, .NET, JavaScript, Python. Постепенно двигаюсь к более глобальным целям и проектам.</p>
+  <section class="about">
+    <h1>Обо мне</h1>
+    <h2>Я backend-разработчик: изучаю C#, .NET, JavaScript, Python. Постепенно двигаюсь к более глобальным целям и проектам.</h2>
   </section>
 
   <section class="projects">
-    <h2><i class="fas fa-code"></i> Мои проекты</h2>
+    <h2>Мои проекты</h2>
     <div class="project-list">
       <div class="project-card">
-        <img src="https://images.unsplash.com/photo-1516321310762-4794370e6a50?ixlib=rb-4.0.3&auto=format&fit=crop&w=300&q=80" alt="Project Image">
         <h3><a href="https://github.com/max-permyakov/Learn-main-algorithms-CS" target="_blank">Learn-main-algorithms-CS</a></h3>
-        <p>Алгоритмы на C# — мой путь к глубине.</p>
+        <p>Алгоритмы на C#</p>
       </div>
       <div class="project-card">
-        <img src="https://images.unsplash.com/photo-1508313153469-6bf41d5a0aab?ixlib=rb-4.0.3&auto=format&fit=crop&w=300&q=80" alt="Project Image">
         <h3><a href="https://github.com/max-permyakov/Calculator-on-CS" target="_blank">Calculator-on-CS</a></h3>
-        <p>Простой консольный калькулятор на C# — фундамент сложного.</p>
+        <p>Простой консольный калькулятор на C#</p>
       </div>
       <div class="project-card">
-        <img src="https://images.unsplash.com/photo-1534972195531-d756b9bfa9f2?ixlib=rb-4.0.3&auto=format&fit=crop&w=300&q=80" alt="Project Image">
         <h3><a href="https://github.com/max-permyakov/Learning-CS-4.0" target="_blank">Learning-CS-4.0</a></h3>
-        <p>Продолжение изучения C# — новые горизонты.</p>
+        <p>Путь изучения C#</p>
       </div>
       <div class="project-card">
-        <img src="https://images.unsplash.com/photo-1517694712202-14dd9538aa97?ixlib=rb-4.0.3&auto=format&fit=crop&w=300&q=80" alt="Project Image">
         <h3><a href="https://github.com/max-permyakov/telegram-chatbot-with-ollama" target="_blank">telegram-chatbot-with-ollama</a></h3>
-        <p>Телеграм-бот на Python — интересная автоматизация.</p>
+        <p>Телеграм-бот c декстопной нейросетью на Python</p>
       </div>
-      <div class="project-card">
-        <img src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?ixlib=rb-4.0.3&auto=format&fit=crop&w=300&q=80" alt="Project Image">
-        <h3><a href="https://github.com/max-permyakov/maxSite" target="_blank">maxSite</a></h3>
-        <p>Мой сайт — начало чего-то большого.</p>
-      </div>
+      
     </div>
   </section>
 
   <section class="social">
-    <h2><i class="fas fa-link"></i> Социальные сети</h2>
+    <h2>Социальные сети</h2>
     <div class="social-icons">
-      <a href="https://github.com/max-permyakov/" class="icon"><i class="fab fa-github"></i> GitHub</a>
-      <a href="https://t.me/@Massimo_16" class="icon"><i class="fab fa-telegram"></i> Telegram</a>
-      <a href="#" class="icon"><i class="fab fa-linkedin"></i> LinkedIn</a>
+      <a href="https://github.com/max-permyakov/" class="icon">GitHub</a>
+      <a href="https://t.me/Massimo_16/" class="icon">Telegram</a>
+      <!--<a href="#" class="icon">LinkedIn</a>-->
     </div>
   </section>
 
