--- a/index.html
+++ b/index.html
@@ -26,25 +26,25 @@
     <div class="project-list">
 
       <div class="project-card">
-        <img src="https://images.unsplash.com/photo-1516321310762-4794370e6a50?ixlib=rb-4.0.3&auto=format&fit=crop&w=300&q=80" alt="Project Image">
+        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.deutschland.de%2Fru%2Ftopic%2Fekonomika%2Fdigitalizaciya-algoritmy-pomogayut-v-zhizni-ili-predstavlyayut-ugrozu&psig=AOvVaw2fp4KThdS4m2TE3m8hOD8Z&ust=1756216493871000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCIit9rWOpo8DFQAAAAAdAAAAABAE" alt="Project Image">
         <h3><a href="https://github.com/max-permyakov/Learn-main-algorithms-CS" target="_blank">Learn-main-algorithms-CS</a></h3>
         <p>Алгоритмы на C# — мой путь к глубине.</p>
       </div>
 
       <div class="project-card">
-        <img src="https://images.unsplash.com/photo-1508313153469-6bf41d5a0aab?ixlib=rb-4.0.3&auto=format&fit=crop&w=300&q=80" alt="Project Image">
+        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fimg-webcalypt.ru%2Ftools%2Fmeme-generator%2Fmemes%2F120856&psig=AOvVaw3Sg36ctlKXBGWGdhF0LCRi&ust=1756216557415000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCNDX_dWOpo8DFQAAAAAdAAAAABAE" alt="Project Image">
         <h3><a href="https://github.com/max-permyakov/Calculator-on-CS" target="_blank">Calculator-on-CS</a></h3>
         <p>Простой консольный калькулятор на C# — фундамент сложного.</p>
       </div>
 
       <div class="project-card">
-        <img src="https://images.unsplash.com/photo-1534972195531-d756b9bfa9f2?ixlib=rb-4.0.3&auto=format&fit=crop&w=300&q=80" alt="Project Image">
+        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Flifeinroad.ru%2Fi-vdrug-ya-ponyala-chto-eto-ne-moy-put-o%2F&psig=AOvVaw2-190tPQ2jSWcEFs-qUTU8&ust=1756216638304000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCPjc-vmOpo8DFQAAAAAdAAAAABAE" alt="Project Image">
         <h3><a href="https://github.com/max-permyakov/Learning-CS-4.0" target="_blank">Learning-CS-4.0</a></h3>
         <p>Путь изучения NET и C#</p>
       </div>
 
       <div class="project-card">
-        <img src="https://images.unsplash.com/photo-1517694712202-14dd9538aa97?ixlib=rb-4.0.3&auto=format&fit=crop&w=300&q=80" alt="Project Image">
+        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fimg-webcalypt.ru%2Ftools%2Fmeme-generator%2Fmemes%2F260826&psig=AOvVaw03LuZ2ZRcycq4gvo4dLKQi&ust=1756216720937000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCNDsgKaPpo8DFQAAAAAdAAAAABAE" alt="Project Image">
         <h3><a href="https://github.com/max-permyakov/telegram-chatbot-with-ollama" target="_blank">telegram-chatbot-with-ollama</a></h3>
         <p>Телеграм-бот С декстопной нейросетью 0llama </p>
       </div>
