--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
     <div class="project-list">
 
       <div class="project-card">
-        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.deutschland.de%2Fru%2Ftopic%2Fekonomika%2Fdigitalizaciya-algoritmy-pomogayut-v-zhizni-ili-predstavlyayut-ugrozu&psig=AOvVaw2fp4KThdS4m2TE3m8hOD8Z&ust=1756216493871000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCIit9rWOpo8DFQAAAAAdAAAAABAE" alt="Project Image">
+        <img src="resurses\robotdoska.png" alt="Project Image">
         <h3><a href="https://github.com/max-permyakov/Learn-main-algorithms-CS" target="_blank">Learn-main-algorithms-CS</a></h3>
         <p>Алгоритмы на C# — мой путь к глубине.</p>
       </div>
 
       <div class="project-card">
-        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fimg-webcalypt.ru%2Ftools%2Fmeme-generator%2Fmemes%2F120856&psig=AOvVaw3Sg36ctlKXBGWGdhF0LCRi&ust=1756216557415000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCNDX_dWOpo8DFQAAAAAdAAAAABAE" alt="Project Image">
+        <img src="resurses\walterCalculator.png" alt="Project Image">
         <h3><a href="https://github.com/max-permyakov/Calculator-on-CS" target="_blank">Calculator-on-CS</a></h3>
         <p>Простой консольный калькулятор на C# — фундамент сложного.</p>
       </div>
