--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
       </div>
 
       <div class="project-card">
-        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Flifeinroad.ru%2Fi-vdrug-ya-ponyala-chto-eto-ne-moy-put-o%2F&psig=AOvVaw2-190tPQ2jSWcEFs-qUTU8&ust=1756216638304000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCPjc-vmOpo8DFQAAAAAdAAAAABAE" alt="Project Image">
+        <img src="resurses\way.png" alt="Project Image">
         <h3><a href="https://github.com/max-permyakov/Learning-CS-4.0" target="_blank">Learning-CS-4.0</a></h3>
         <p>Путь изучения NET и C#</p>
       </div>
 
       <div class="project-card">
-        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fimg-webcalypt.ru%2Ftools%2Fmeme-generator%2Fmemes%2F260826&psig=AOvVaw03LuZ2ZRcycq4gvo4dLKQi&ust=1756216720937000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCNDsgKaPpo8DFQAAAAAdAAAAABAE" alt="Project Image">
+        <img src="" alt="Project Image">
         <h3><a href="https://github.com/max-permyakov/telegram-chatbot-with-ollama" target="_blank">telegram-chatbot-with-ollama</a></h3>
         <p>Телеграм-бот С декстопной нейросетью 0llama </p>
       </div>
