--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </div>
 
       <div class="project-card">
-        <img src="" alt="Project Image">
+        <img src="resurses\neuro.png" alt="Project Image">
         <h3><a href="https://github.com/max-permyakov/telegram-chatbot-with-ollama" target="_blank">telegram-chatbot-with-ollama</a></h3>
         <p>Телеграм-бот С декстопной нейросетью 0llama </p>
       </div>
