--- a/index.html
+++ b/index.html
@@ -8,19 +8,24 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" href="https://img.icons8.com/ios-filled/50/ffffff/code.png">
+  
 </head>
 <body>
   <header class="hero">
-    <h1>Привет! Я Максим Пермяков</h1>
+    <h1>Привет!</h1>
+    <h1>Я Максим Пермяков</h1>
     <p>Пока не профессионал, но стремлюсь стать лучше</p>
     <a href="#about" class="hero-button"><i class="fas fa-arrow-down"></i> Узнать больше</a>
   </header>
-
+  <br>
   <section id="about" class="about">
-    <h2><i class="fas fa-user"></i> Обо мне</h2>
-    <p>backend-разработчик: изучаю C#, .NET, JavaScript, Python. Постепенно двигаюсь к более глобальным целям и проектам.</p>
+    
+    <h1><i class="fas fa-user"></i> <strong>Обо мне</strong></h1>
+    <h2>backend-разработчик: изучаю C#, .NET, JavaScript, Python. Постепенно двигаюсь к более глобальным целям и проектам.</h2>
+    <p>Сейчас учусь в Краснодарсом колледже электронного приборостроения на специальности информационные системы и программирование.</p>
+    <p></p>
   </section>
-
+  <br>
   <section class="projects">
     <h2><i class="fas fa-code"></i> Мои проекты</h2>
     <div class="project-list">
@@ -28,19 +33,19 @@
       <div class="project-card">
         <img src="resurses\robotdoska.png" alt="Project Image">
         <h3><a href="https://github.com/max-permyakov/Learn-main-algorithms-CS" target="_blank">Learn-main-algorithms-CS</a></h3>
-        <p>Алгоритмы на C# — мой путь к глубине.</p>
+        <p>Алгоритмы на C# </p>
       </div>
 
       <div class="project-card">
         <img src="resurses\walterCalculator.png" alt="Project Image">
         <h3><a href="https://github.com/max-permyakov/Calculator-on-CS" target="_blank">Calculator-on-CS</a></h3>
-        <p>Простой консольный калькулятор на C# — фундамент сложного.</p>
+        <p>Простой консольный калькулятор на C# </p>
       </div>
 
       <div class="project-card">
-        <img src="resurses\way.png" alt="Project Image">
+        <img src="..\resurses\way.png" alt="Project Image">
         <h3><a href="https://github.com/max-permyakov/Learning-CS-4.0" target="_blank">Learning-CS-4.0</a></h3>
-        <p>Путь изучения NET и C#</p>
+        <p>Путь изучения NET и C# </p>
       </div>
 
       <div class="project-card">
