--- a/index.html
+++ b/index.html
@@ -23,7 +23,18 @@
     <h1><i class="fas fa-user"></i> <strong>Обо мне</strong></h1>
     <h2>backend-разработчик: изучаю C#, .NET, JavaScript, Python. Постепенно двигаюсь к более глобальным целям и проектам.</h2>
     <p>Сейчас учусь в Краснодарсом колледже электронного приборостроения на специальности информационные системы и программирование.</p>
-    <p></p>
+    <p>Навыки:</p>
+    <ul>
+      <li>программирование на: C#, JavaScript, Python, HTML/CSS</li>
+      <li>Linux</li>
+      <li>Git</li>
+      <li>~Docker</li>
+      <li>English B2</li>
+      <li>SQL</li>
+      <li>Git/GitHub</li>
+      <p>В <strong>ближайшем</strong> будущем:</p>
+      <li>CI/CD</li>
+      <li></li>
   </section>
   <br>
   <section class="projects">
@@ -43,7 +54,7 @@
       </div>
 
       <div class="project-card">
-        <img src="..\resurses\way.png" alt="Project Image">
+        <img src="\resurses\way.png" alt="Project Image">
         <h3><a href="https://github.com/max-permyakov/Learning-CS-4.0" target="_blank">Learning-CS-4.0</a></h3>
         <p>Путь изучения NET и C# </p>
       </div>
