--- a/index.html
+++ b/index.html
@@ -23,18 +23,32 @@
     <h1><i class="fas fa-user"></i> <strong>Обо мне</strong></h1>
     <h2>backend-разработчик: изучаю C#, .NET, JavaScript, Python. Постепенно двигаюсь к более глобальным целям и проектам.</h2>
     <p>Сейчас учусь в Краснодарсом колледже электронного приборостроения на специальности информационные системы и программирование.</p>
-    <p>Навыки:</p>
+    <h2>Навыки:</h2>
     <ul>
-      <li>программирование на: C#, JavaScript, Python, HTML/CSS</li>
-      <li>Linux</li>
-      <li>Git</li>
-      <li>~Docker</li>
-      <li>English B2</li>
-      <li>SQL</li>
-      <li>Git/GitHub</li>
-      <p>В <strong>ближайшем</strong> будущем:</p>
-      <li>CI/CD</li>
-      <li></li>
+      <li><a href="https://www.google.com/search?q=C%23+programming" target="_blank">программирование на: C#</a>, 
+          <a href="https://www.google.com/search?q=JavaScript+programming" target="_blank">JavaScript</a>, 
+          <a href="https://www.google.com/search?q=Python+programming" target="_blank">Python</a>, 
+          <a href="https://www.google.com/search?q=HTML+CSS" target="_blank">HTML/CSS</a>
+      </li>
+      <li><a href="https://www.google.com/search?q=Linux" target="_blank">Linux</a></li>
+      <li><a href="https://www.google.com/search?q=Git" target="_blank">Git</a></li>
+      <li><a href="https://www.google.com/search?q=Docker" target="_blank">~Docker</a></li>
+      <li><a href="https://www.google.com/search?q=English+B2" target="_blank">English B2</a></li>
+      <li><a href="https://www.google.com/search?q=SQL" target="_blank">SQL</a></li>
+      <li><a href="https://www.google.com/search?q=GitHub" target="_blank">Git/GitHub</a></li>
+      <li>и многое другое...</li>
+    </ul>
+    <p>В <strong>ближайшем</strong> будущем:</p>
+    <ul>
+      <li><a href="https://www.google.com/search?q=CI%2FCD" target="_blank">CI/CD</a></li>
+      <li><a href="https://www.google.com/search?q=REST+API" target="_blank">REST API</a></li>
+      <li><a href="https://www.google.com/search?q=Unit+testing" target="_blank">Unit-тестирование</a></li>
+      <li><a href="https://www.google.com/search?q=ORM" target="_blank">ORM</a></li>
+      <li><a href="https://www.google.com/search?q=Java+programming" target="_blank">Java</a></li>
+      <li><a href="https://www.google.com/search?q=TypeScript" target="_blank">TypeScript</a></li>
+    </ul>
+      <li>и многое другое...</li>
+    </ul>
   </section>
   <br>
   <section class="projects">
