--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <header class="hero">
     <h1>Привет!</h1>
-    <h1>Я Максим Пермяков</h1>
+    <h1>Я Максим Пермяков<i class="fas fa-code"></i></h1>
     <p>Пока не профессионал, но стремлюсь стать лучше</p>
     <a href="#about" class="hero-button"><i class="fas fa-arrow-down"></i> Узнать больше</a>
   </header>
