--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
       <li><a href="https://www.google.com/search?q=English+B2" target="_blank">English B2</a></li>
       <li><a href="https://www.google.com/search?q=SQL" target="_blank">SQL</a></li>
       <li><a href="https://www.google.com/search?q=GitHub" target="_blank">Git/GitHub</a></li>
-      <li>и многое другое...</li>
     </ul>
     <p>В <strong>ближайшем</strong> будущем:</p>
     <ul>
@@ -52,7 +51,7 @@
   </section>
   <br>
   <section class="projects">
-    <h2><i class="fas fa-code"></i> Мои проекты</h2>
+    <h2><i class="fas fa-code"></i> Мои проекты GitHub</h2>
     <div class="project-list">
 
       <div class="project-card">
@@ -68,7 +67,7 @@
       </div>
 
       <div class="project-card">
-        <img src="\resurses\way.png" alt="Project Image">
+        <img src="resurses\way.jpg" alt="Project Image">
         <h3><a href="https://github.com/max-permyakov/Learning-CS-4.0" target="_blank">Learning-CS-4.0</a></h3>
         <p>Путь изучения NET и C# </p>
       </div>
@@ -90,6 +89,19 @@
       <a href="#" class="icon"><i class="fab fa-linkedin"></i> LinkedIn</a>
     </div>
   </section>
+
+  <!-- Optional CTA button and floating lights for the integrated background effect -->
+  
+
+  <div class="light x1"></div>
+  <div class="light x2"></div>
+  <div class="light x3"></div>
+  <div class="light x4"></div>
+  <div class="light x5"></div>
+  <div class="light x6"></div>
+  <div class="light x7"></div>
+  <div class="light x8"></div>
+  <div class="light x9"></div>
 
   <footer>
     <p>© 2025 Максим Пермяков</p>
