--- a/index.html
+++ b/index.html
@@ -81,6 +81,25 @@
     </div>
   </section>
 
+<section class="another-projects">
+<div class="project-list">
+  <h2><i class="fas fa-code"></i>Другие мои проекты</h2>
+
+        <div class="project-card">
+        <img src="resurses\rabotaet.png" alt="Project Image">
+        <h3><a href="https://t.me/ColdM1ndbot" target="_blank">ColdM1ndBot</a></h3>
+        <p>Личный Телеграм-бот который расскажет обо мне и сможет сказать погоду</p>
+      </div>
+
+      <div class="project-card">
+      <img src="resurses\robot.jpg" alt="Project Image">
+        <h3><a href="https://t.me/ColdM1ndbot" target="_blank">Benjamin</a></h3>
+        <p>Телеграм-бот который может заменить вам собеседника. Под капотом ollama с gemma3:27b</p>
+      </div>
+    </div>
+
+</section>
+
   <section class="social">
     <h2><i class="fas fa-link"></i> Социальные сети</h2>
     <div class="social-icons">
@@ -90,18 +109,7 @@
     </div>
   </section>
 
-  <!-- Optional CTA button and floating lights for the integrated background effect -->
-  
 
-  <div class="light x1"></div>
-  <div class="light x2"></div>
-  <div class="light x3"></div>
-  <div class="light x4"></div>
-  <div class="light x5"></div>
-  <div class="light x6"></div>
-  <div class="light x7"></div>
-  <div class="light x8"></div>
-  <div class="light x9"></div>
 
   <footer>
     <p>© 2025 Максим Пермяков</p>
