--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
       <li><a href="https://www.google.com/search?q=ORM" target="_blank">ORM</a></li>
       <li><a href="https://www.google.com/search?q=Java+programming" target="_blank">Java</a></li>
       <li><a href="https://www.google.com/search?q=TypeScript" target="_blank">TypeScript</a></li>
-    </ul>
       <li>и многое другое...</li>
     </ul>
   </section>
@@ -82,23 +81,27 @@
   </section>
 
 <section class="another-projects">
-<div class="project-list">
-  <h2><i class="fas fa-code"></i>Другие мои проекты</h2>
-
-        <div class="project-card">
-        <img src="resurses\rabotaet.png" alt="Project Image">
+  <h2><i class="fas fa-code"></i> Другие мои проекты</h2>
+  <div class="project-list">
+    <div class="another-projects-card">
+      <img src="resurses\rabotaet.png" alt="ColdM1ndBot">
+      <div class="card-body">
         <h3><a href="https://t.me/ColdM1ndbot" target="_blank">ColdM1ndBot</a></h3>
-        <p>Личный Телеграм-бот который расскажет обо мне и сможет сказать погоду</p>
-      </div>
-
-      <div class="project-card">
-      <img src="resurses\robot.jpg" alt="Project Image">
-        <h3><a href="https://t.me/ColdM1ndbot" target="_blank">Benjamin</a></h3>
-        <p>Телеграм-бот который может заменить вам собеседника. Под капотом ollama с gemma3:27b</p>
+        <p>Личный Телеграм-бот, который расскажет обо мне и покажет погоду.</p>
       </div>
     </div>
 
+    <div class="another-projects-card">
+      <img src="resurses\robot.jpg" alt="Benjamin">
+      <div class="card-body">
+        <h3><a href="https://t.me/Benjamin_asistent_bot" target="_blank">Benjamin</a></h3>
+        <p>Телеграм-бот-собеседник (под капотом: ollama + gemma3:27b).</p>
+      </div>
+    </div>
+  </div>
 </section>
+  <h4>Но эти проекты работают не всегда...</h4>
+  <h4>Сервера для поддержания их работы отсутсвует, но вы всегда можете мне написать для его включения )</h4>
 
   <section class="social">
     <h2><i class="fas fa-link"></i> Социальные сети</h2>
@@ -112,7 +115,7 @@
 
 
   <footer>
-    <p>© 2025 Максим Пермяков</p>
+    <p>© 2025 Maksim Permyakov</p>
   </footer>
 </body>
 </html>
