--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
     </div>
   </section>
 
-<section class="another-projects">
+<section class="projects">
   <h2><i class="fas fa-code"></i> Другие мои проекты</h2>
   <div class="project-list">
-    <div class="another-projects-card">
+    <div class="project-card">
       <img src="resurses\rabotaet.png" alt="ColdM1ndBot">
       <div class="card-body">
         <h3><a href="https://t.me/ColdM1ndbot" target="_blank">ColdM1ndBot</a></h3>
@@ -91,7 +91,7 @@
       </div>
     </div>
 
-    <div class="another-projects-card">
+    <div class="project-card">
       <img src="resurses\robot.jpg" alt="Benjamin">
       <div class="card-body">
         <h3><a href="https://t.me/Benjamin_asistent_bot" target="_blank">Benjamin</a></h3>
