--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     
     <h1><i class="fas fa-user"></i> <strong>Обо мне</strong></h1>
     <h2>backend-разработчик: изучаю C#, .NET, JavaScript, Python. Постепенно двигаюсь к более глобальным целям и проектам.</h2>
-    <p>Сейчас учусь в Краснодарсом колледже электронного приборостроения на специальности информационные системы и программирование.</p>
+    <p>Сейчас учусь в Краснодарском колледже электронного приборостроения на специальности информационные системы и программирование.</p>
     <h2>Навыки:</h2>
     <ul>
       <li><a href="https://www.google.com/search?q=C%23+programming" target="_blank">программирование на: C#</a>, 
@@ -95,7 +95,7 @@
       <img src="resurses\robot.jpg" alt="Benjamin">
       <div class="card-body">
         <h3><a href="https://t.me/Benjamin_asistent_bot" target="_blank">Benjamin</a></h3>
-        <p>Телеграм-бот-собеседник (под капотом: ollama + gemma3:27b).</p>
+        <p>Телеграм-бот-собеседник (под капотом: ollama + и несколько нейросетей).</p>
       </div>
     </div>
   
