--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <section class="projects">
     <h2><i class="fas fa-code"></i> Мои проекты GitHub</h2>
     <div class="project-list">
-
+      
       <div class="project-card">
         <img src="resurses\robotdoska.png" alt="Project Image">
         <h3><a href="https://github.com/max-permyakov/Learn-main-algorithms-CS" target="_blank">Learn-main-algorithms-CS</a></h3>
@@ -70,7 +70,11 @@
         <h3><a href="https://github.com/max-permyakov/Learning-CS-4.0" target="_blank">Learning-CS-4.0</a></h3>
         <p>Путь изучения NET и C# </p>
       </div>
-
+      <div class="project-card">
+        <img src="resurses\lomka.png" alt="Project Image">
+        <h3><a href="https://github.com/max-permyakov/LeetCode-Solutions" target="_blank">Learn-main-algorithms-CS</a></h3>
+        <p>Задачки с LeetCode</p>
+      </div>
       <div class="project-card">
         <img src="resurses\neuro.png" alt="Project Image">
         <h3><a href="https://github.com/max-permyakov/telegram-chatbot-with-ollama" target="_blank">telegram-chatbot-with-ollama</a></h3>
