--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     
     <h1><i class="fas fa-user"></i> <strong>Обо мне</strong></h1>
     <h2>backend-разработчик: изучаю C#, .NET, JavaScript, Python. Постепенно двигаюсь к более глобальным целям и проектам.</h2>
-    <p>Сейчас учусь в Краснодарском колледже электронного приборостроения на специальности информационные системы и программирование.</p>
+    <h2>Сейчас учусь в Краснодарском колледже электронного приборостроения на специальности информационные системы и программирование.</h2>
     <h2>Навыки:</h2>
     <ul>
     <li><a href="https://www.google.com/search?q=C%23+programming" target="_blank" rel="noopener noreferrer">программирование на: C#</a>, 
