--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
           <img src="resurses\lomka.png" alt="Project Image">
           <span class="card-badge" aria-hidden="true"><i class="fas fa-arrow-up-right-from-square"></i></span>
           
-          <h3>Задачки с LeetCode</h3>
-         
+          <h3>LeetCode-Solutions</h3>
+         <p>Задачки с LeetCode</p>
         </a>
       </div>
       <div class="project-card">
